--- a/Assignment3/assignment3-resources/Backend/docker-compose.yml
+++ b/Assignment3/assignment3-resources/Backend/docker-compose.yml
@@ -1,1 +1,16 @@
-[[TODO]]
+version: '2'
+services:
+  web:
+    build: .
+    dockerfile: Dockerfile
+    ports:
+     - "80:8000"
+    volumes:
+     - /etc:/hypervisor_etc
+    image: cc17g2/backend
+    deploy:
+      replicas: 5
+    placement:
+        constraints: [node.hostname != CCG2_A3_Stack-frontend]
+    autorestart: ON_FAILURE
+  
