--- a/Assignment3/assignment3-resources/Backend/docker-compose.yml
+++ b/Assignment3/assignment3-resources/Backend/docker-compose.yml
@@ -1,16 +1,20 @@
-version: '2'
+version: "3.2"
 services:
-  web:
-    build: .
-    dockerfile: Dockerfile
-    ports:
-     - "80:8000"
-    volumes:
-     - /etc:/hypervisor_etc
-    image: cc17g2/backend
+  web_backend:
+    image: cc17g2/backend_th1
     deploy:
       replicas: 5
-    placement:
-        constraints: [node.hostname != CCG2_A3_Stack-frontend]
-    autorestart: ON_FAILURE
-  
+      placement:
+        constraints:
+            - node.hostname != CCG2_A3_Stack-frontend
+    ports:
+        - "8000:80"
+    volumes:
+        - /etc:/hypervisor_etc
+    
+    restart: always
+    environment:
+        - CC_BACKEND_SERVERS = ${CC_BACKEND_SERVERS}
+    labels:
+        com.cc17g2.Backend: "Backend Stack" 
+        
