--- a/Assignment3/assignment3-resources/Frontend/Dockerfile
+++ b/Assignment3/assignment3-resources/Frontend/Dockerfile
@@ -1,18 +1,23 @@
-#udo Use nginx  as a parent image
+# Use nginx(web server)  as a parent image
 FROM nginx
 
-EXPOSE 80
+# The file  nginx.conf must be available inside the container as /etc/nginx/nginx.conf
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY fix-nginx-conf.sh /etc/nginx/fix-nginx-conf.sh
-VOLUME /hypervisor_etc
-# Set the working directory to /home/ubuntu
-#WORKDIR /home/ubuntu
-# Make port 80 available to the world outside this container
 
-# Define environment variable
-ENV CC_BACKEND_SERVERS='192.168.0.3 192.168.0.5'
-#ENV CC_BACKEND_SERVERS='ccg2-a3-stack-backend-0 ccg2-a3-stack-backend-1'
-#ENV CC_BACKEND_SERVERS CCG2-A3-STACK-BACKEND-0 CCG2-A3-STACK-BACKEND-1
+# Copy file fix-nginx-conf.sh to an arbitrary location 
+COPY fix-nginx-conf.sh /home/ubuntu/fix-nginx-conf.sh
+
+# Creating the volume to be mounted later in docker-compose file
+VOLUME /hypervisor_etc
+
+# Set the working directory to /home/ubuntu
+WORKDIR /home/ubuntu
+
+# Make port 80 available to the world outside this container
+EXPOSE 80
+
+# Defining environment variable
+ENV CC_BACKEND_SERVERS=$CC_BACKEND_SERVERS
+
 # Run when the container launches  
-#CMD ["/bin/bash", "-c","echo ${CC_BACKEND_SERVERS} && ./etc/nginx/fix-nginx-conf.sh ${CC_BACKEND_SERVERS} && nginx"]
-CMD ./etc/nginx/fix-nginx-conf.sh "$CC_BACKEND_SERVERS" && nginx
+CMD ./fix-nginx-conf.sh "$CC_BACKEND_SERVERS" && nginx
